<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/bg_shadow2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/title_bg_mountain"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="#adadad"
                android:gravity="center"
                android:text="字号"
                android:layout_gravity="center_vertical"/>
            <FrameLayout
                android:id="@+id/fl_smaller"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_font_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_gravity="center"
                    android:textColor="#767676"
                    android:textSize="22sp"/>
            </FrameLayout>
            <TextView
                android:id="@+id/tv_dur_textsize"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="#767676"
                android:text="18"
                android:gravity="center"
                android:singleLine="true"
                android:layout_gravity="center" />
            <FrameLayout
                android:id="@+id/fl_bigger"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_font_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_gravity="center"
                    android:textColor="#767676"
                    android:textSize="22sp"/>
            </FrameLayout>
            <TextView
                android:id="@+id/tv_textsize_default"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@drawable/selector_pop_font_color"
                android:gravity="center"
                android:text="默认"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_default"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_qihei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_qihei"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_fzkatong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_fzkatong"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_bysong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_bysong"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_hkshaonv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_hkshaonv"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_hwzhongsong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_hwzhongsong"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_kaiti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_kaiti"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_pop_font_bg_nor">
                <TextView
                    android:id="@+id/tv_youyuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_youyuan"
                    android:layout_gravity="center"
                    android:textColor="@drawable/selector_pop_font_color"
                    android:textSize="14sp"/>
            </FrameLayout>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="#adadad"
                android:gravity="center"
                android:text="背景"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_white"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/icon_readbook_white"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_yellow"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/icon_readbook_yellow"
                app:civ_border_width="1dp"
                app:civ_border_color="#F3B63F"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_green"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/icon_readbook_green"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_pink"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/feed_adv_bg_female_1"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_bule1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/reading_bg_night1"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_bule2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/reading_bg_night3"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_bg_black"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/icon_readbook_black"
                app:civ_border_width="1dp"
                app:civ_border_color="#00000000"/>
            <View
                android:layout_width="50dp"
                android:layout_height="0dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>